--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
+  jobs:
+    pre_build:
+      - python scripts/generate_sitemap.py
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
